fix: image width on mobile

--- a/src/sass/_photo-card.scss
+++ b/src/sass/_photo-card.scss
@@ -19,17 +19,12 @@
 
   &:hover .info {
     opacity: 1;
+    border-radius: 0 0 10px 10px;
   }
   &:hover,
   &:visited,
   &:active {
     text-decoration: none;
-  }
-
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
 
@@ -53,10 +48,11 @@
   padding: 5px 10% 0;
   background-color: #ffffff95;
   transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  border-radius: 3px 3px 0 0;
+  border-radius: 3px 3px 10px 10px;
 
   &:hover {
     background-color: #fff;
+    border-radius: 0 0 10px 10px;
   }
 
   .info-item {
